<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi Player</string>
    <string name="new_game">New Game</string>

    <string name="submit_button">Start Game</string>
    <string name="player1_name">Enter Player 1 Name</string>
    <string name="player2_name">Enter Player 2 Name</string>
    <string name="player_2_default_name">Player2</string>
    <string name="player_1_default_name">Player1</string>
    <string name="game_name">Tic Tac Toe Game</string>

    <string name="default_player_turn_text">Player 1\'s turn (X)</string>
    <string name="end_game">End Game</string>
    <string name="restart_game">Restart Game</string>
    <string name="reset_board">Reset Board</string>
    <string name="name">Enter Full Name</string>

    <string name="initial_games_played_0">0</string>
    <string name="bar_demarcate_scores">|</string>
    <string name="continue_button_text">Continue</string>
    <string name="result_text">Score Board</string>

    <string name="empty_text"> </string>
    <string name="winnerText">Win</string>
    <string name="loserText">Lose</string>

    <string name="logo_description">Logo</string>
    <string name="background_description">Background</string>

    <string name="single_player_activity">Single Player</string>
    <string name="multi_player_activity">Multi Player</string>
    <string name="score_board">Score Board</string>

</resources>
