<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.elixirprimehouse.tictactoe.ScoreBoardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/singlebackground"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:fontFamily="cursive"
                android:text="@string/result_text"
                android:textAlignment="center"
                android:textSize="35sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:background="@color/viewBackground">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p1name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="serif-monospace"
                    android:text="@string/player_1_default_name"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/p1wins"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/initial_games_played_0"
                    android:textAlignment="center"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/p1result"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/winnerText"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="25sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/p2name"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/player_2_default_name"
                    android:fontFamily="serif-monospace"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/p2wins"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_games_played_0"
                    android:textAlignment="center"
                    android:fontFamily="serif-monospace"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/p2result"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/loserText"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/viewBackground">
            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:src="@drawable/cup"/>

                <TextView
                    android:id="@+id/draws"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1_default_name"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|center"
                    android:textColor="@color/mainButtonTextColor"
                    android:textSize="20dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/viewBackground">
            </View>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continue_button_text"
                android:onClick="beginNewGame"
                android:textAlignment="center"
                android:background="@drawable/draw"
                android:textColor="@color/textColorHint"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_1"/>

    </RelativeLayout>

</ScrollView>
