<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context="com.elixirprimehouse.tictactoe.SinglePlayerActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/singlebackground"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="160dp"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_player"
                android:textSize="30sp"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"/>

            <EditText
                android:id="@+id/player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/boardTextColor"
                android:textColorHint="@color/textColorHint"
                android:hint="@string/name"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/mainButtonTextColor"
                android:layout_marginBottom="30dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit_button"
                android:background="@drawable/draw"
                android:textColor="@color/mainButtonTextColor"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:onClick="startGame" />

        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_1"/>

    </RelativeLayout>
</ScrollView>

